--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
   color: blue;
 }
 
-.background-change {
+.mountain {
   background-image: url(https://images.unsplash.com/photo-1576547753772-27b4c3e6b147?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2200&q=80);
 }
 
-.newbg {
+.ocean {
   background-image: url(https://images.unsplash.com/photo-1468581264429-2548ef9eb732?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80);
+}
+
+.space {
+  background-image: url(https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2104&q=80);
 }
